--- a/lesson_5.2(TWIG)/templates/tasks.html
+++ b/lesson_5.2(TWIG)/templates/tasks.html
@@ -23,7 +23,7 @@
 				<th>Закрепить задачу за пользователем</th>
 			</tr>
 		</thead>
-		
+		{{tasks}}
 		{% for task in tasks %}
 		<tbody>
 			<tr>
