--- a/lesson_5.2(TWIG)/templates/main.html
+++ b/lesson_5.2(TWIG)/templates/main.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
-<h1>Здравствуйте, user! Вот ваш список дел:</h1>
+<a href="templates\register.html">Войдите на сайт</a>
+
+<!-- <h1>Здравствуйте, user! Вот ваш список дел:</h1>
 
 <form action="">
 	<input type="text">
@@ -17,7 +19,7 @@
 <div id="task">
 {% block task %}
 {% endblock %}
-</div>
+</div> -->
 
 </body>
 </html>
