--- a/lesson_5.2(TWIG)/templates/main.html
+++ b/lesson_5.2(TWIG)/templates/main.html
@@ -8,7 +8,7 @@
 
 <!-- <a href="templates\register.html">Войдите на сайт</a> -->
 
-<h1>Здравствуйте, user! Вот ваш список дел:</h1>
+<h1>Здравствуйте, {{login}}! Вот ваш список дел:</h1>
 
 <form action="">
 	<input type="text">
