--- a/lesson_5.2(TWIG)/templates/main_table_task.html
+++ b/lesson_5.2(TWIG)/templates/main_table_task.html
@@ -36,9 +36,9 @@
 
 
 
- 	<td> {{d.user_id|escape}}</td>
+ 	<td> <!-- {{login}} --></td> <!-- Ответсвенный -->
 
- 	<td>  {{d.assigned_user_id|escape}} </td>
+ 	<td>  {{login}} </td> <!-- Автор -->
 
  	<td> Другой пользователь </td> 
 
