--- a/lesson_5.2(TWIG)/templates/main_table_task.html
+++ b/lesson_5.2(TWIG)/templates/main_table_task.html
@@ -31,8 +31,8 @@
 
  
  	<td><a name=\"edit\" href=\"lesson_4.2.php?edit={{d.id}}">Изменить</a></td>
- 	<td><a name=\"done\" href=\"lesson_4.2.php?done={{d.id}}">Выполнить</a></td>
- 	<td><a name=\"del\" href=\"lesson_4.2.php?del={{d.id}}">Удалить</a></td>
+ 	<td><a name=done href="?id={{d.id}}&action=done">Выполнить</a></td>
+ 	<td><a name =del  href="?id={{d.id}}&action=delete">Удалить</a></td>
 
 
 
