--- a/lesson_5.2(TWIG)/templates/main.html
+++ b/lesson_5.2(TWIG)/templates/main.html
@@ -10,9 +10,18 @@
 
 <h1>Здравствуйте, {{login}}! Вот ваш список дел:</h1>
 
-<form action="">
-	<input type="text">
-	<input type="submit" value = "Добавить">
+
+<form action="" method="POST">
+  <input type="submit" value = "Выйти из аккаунта"  name = exit>
+</form>
+
+
+<form action="" method="POST">
+  
+  <br>
+  <br>
+	<input type="text" name = textTask>
+	<input type="submit" value = "Добавить"  name = addTask>
 </form>
 
 
