--- a/lesson_5.2(TWIG)/templates/main.html
+++ b/lesson_5.2(TWIG)/templates/main.html
@@ -9,10 +9,9 @@
 <!-- <a href="templates\register.html">Войдите на сайт</a> -->
 
 <h1>Здравствуйте, {{login}}! Вот ваш список дел:</h1>
-
-
 <form action="" method="POST">
-  <input type="submit" value = "Выйти из аккаунта"  name = exit>
+  <input type="submit" value = "Выйти из аккаунта"  name = "exit">
+
 </form>
 
 
@@ -21,8 +20,10 @@
   <br>
   <br>
 	<input type="text" name = textTask>
-	<input type="submit" value = "Добавить"  name = addTask>
+	<input type="submit" value = "Добавить"  name = "addTask">
+	 
 </form>
+
 
 
 <div id="task">
