--- a/lesson_5.2(TWIG)/templates/main_table_task_edit.html
+++ b/lesson_5.2(TWIG)/templates/main_table_task_edit.html
@@ -1,7 +1,18 @@
 {% extends "main.html" %}
 
 {% block task %}
+<form action="" method="POST">
+  <input type="submit" value = "Выйти из аккаунта"  name = "exit">
+</form>
 
+
+<form action="" method="POST">
+  
+  <br>
+  <br>
+	<input type="text" name = textTask>
+	<input type="submit" value = "Сохранить"  name = "editTask">
+</form>
 
 <table>
 	<tdead>
