--- a/FinalTask/templates/main.html
+++ b/FinalTask/templates/main.html
@@ -13,9 +13,10 @@
 </head>
 <body>
 	<header>
-		<h1>FAQ</h1>
+		<h1> Вы не нашли ответ на свой вопрос? Задайте его мне.</h1>
 	</header>
-
+ 
+    
 
 	{% block questions %}
 	{% endblock %}
